# prophet.core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.excalidraw
core/: daemon_api.cpp  daemon_api.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  modules.cpp  modules.hpp
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  ModuleDataViewer.cpp  ModuleDataViewer.hpp  ModuleDelegate.cpp  ModuleDelegate.h  ModuleDelegate.hpp  main.cpp
include/: module_interface.hpp
modules/: modules.json  note.txt
modules-disabled/pomodoro/: module.json
modules/codetrackd/: codetrackd.cpp  module.json
modules/codetrackd/data/: data.json
modules/flowtracker/: flowtracker.cpp  module.json  note.txt
modules/flowtracker/data/: data.json
src/: main.cpp
